# UADE_G7_Caballo_Ajedrez

./: .gitignore  README.md  pyproject.toml
docs/: ~$upo 07 - Progra III - Tablero de ajedrez.docx
presentation/: index.html  package-lock.json  package.json
src/: backtracking.py  branch_bound.py  main.py
src/utils/: __init__.py  concurrent_backtracking.py  concurrent_bnb.py  game.py  tablero.py  test.py  test2.py  test_concurrent.py
