[tool.poetry]
name = "uade-g3-caballo-ajedrez"
version = "0.1.0"
description = ""
authors = ["Cecilia Huaman <chuaman@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
