[tool.poetry]
name = "uade-g7-caballo-ajedrez"
version = "0.1.0"
description = "Chess backtraking TPO"
authors = ["Cecilia Huaman <chuaman@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
pygame-textinput = "^1.0.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
